Automatically adapt the part content editor height to the page height. Align the top of the viewer in th epart editor to the top of the editor. Fixes #27.

--- a/src/wte/static/scss/application/_textbook.scss
+++ b/src/wte/static/scss/application/_textbook.scss
@@ -5,6 +5,10 @@
     overflow: auto;
     box-sizing: border-box;
     
+    &.part-editor {
+        margin-top: 10em;
+    }
+    
     iframe {
         border-width: 0;
     }
